ISSUE #88 - Added Infinite Scroll to tree filter and tweaked UI for panel content

--- a/plugins/AM_/filter/filter.jade
+++ b/plugins/AM_/filter/filter.jade
@@ -1,3 +1,3 @@
 md-input-container
-	label Filter
-	input(type="text", ng-model="fl.filterText")
+	label
+	input(type="text", ng-model="fl.filterText", placeholder="Filter")
