--- a/plugins/AM_/panel/panelContent.jade
+++ b/plugins/AM_/panel/panelContent.jade
@@ -2,6 +2,7 @@ div(layout="column", class="md-whiteframe-1dp", ng-class="pc.class", ng-show="pc
 
 	md-toolbar(class="md-primary", ng-click="pc.click()" ng-if="pc.showTitleBar")
 		div(class="md-toolbar-tools")
+			span(class="fa", ng-class="pc.icon")
 			label(class="md-flex") {{pc.contentTitle}}
 
 	md-content(id="content", flex, layout-padding)
