--- a/plugins/AM_/bottomButtons/bottomButtons.jade
+++ b/plugins/AM_/bottomButtons/bottomButtons.jade
@@ -1,6 +1,6 @@
 div(layout="row", layout-align="center center")
 	div(ng-if="bb.showButtons")
-		md-button.md-fab.md-mini.md-primary.md-hue-3(
+		md-button.md-fab.md-mini.actionButton(
 			ng-repeat="button in bb.leftButtons track by $index"
 			ng-click="button.click()"
 			aria-label="{{button.label}}")
@@ -9,7 +9,7 @@ div(layout="row", layout-align="center center")
 		md-button.md-fab.md-primary(ng-click="bb.showHideButtons()", aria-label="Show buttons")
 			md-icon#showButtonIcon(md-font-icon="fa-navicon", class="fa")
 	div(ng-if="bb.showButtons")
-		md-button.md-fab.md-mini.md-primary.md-hue-3(
+		md-button.md-fab.md-mini.actionButton(
 			ng-repeat="button in bb.rightButtons track by $index"
 			ng-click="button.click()"
 			aria-label="{{button.label}}")
