--- a/plugins/AM_/tree/tree.jade
+++ b/plugins/AM_/tree/tree.jade
@@ -1,4 +1,4 @@
-div(ui-tree, data-nodrop-enabled="true", data-nodrag="true", ng-if="tr.showTree")
+div(ui-tree, data-nodrop-enabled="true", data-nodrag="true", ng-show="tr.showTree")
 	tree-nodes(
 		nodes="tr.nodes"
 		show-children="tr.showChildren"
@@ -6,5 +6,15 @@ div(ui-tree, data-nodrop-enabled="true", data-nodrag="true", ng-if="tr.showTree"
 		on-node-selected="tr.nodeSelected(nodeId)"
 		on-node-toggled="tr.nodeToggled(nodeId)"
 		selected-node="tr.selectedNode"
-		toggled-node="tr.toggledNode"
-		filter-text="tr.filterText")
+		toggled-node="tr.toggledNode")
+
+div(ng-if="tr.showFilterList")
+	md-virtual-repeat-container(id="vertical-container")
+		div(md-virtual-repeat="item in tr.infiniteItems", md-on-demand, class="repeated-item", flex)
+			//md-button.md-mini.treeNodeButton(ng-click="tn.nodeToggled(tn.node._id)", aria-label="Toggle", ng-if="item.showToggleButton")
+				md-icon(md-font-icon="fa-eye", class="fa", ng-if="item.toggleState")
+				md-icon(md-font-icon="fa-eye-slash", class="fa", ng-if="!item.toggleState")
+			span(ng-click="tn.nodeToggled(tn.node._id)")
+				span(class="fa fa-eye", ng-if="tn.toggleState")
+				span(class="fa fa-eye-slash", ng-if="!tn.toggleState")
+			label {{item.name}}
