--- a/public/plugins/AM_/tree/tree.css
+++ b/public/plugins/AM_/tree/tree.css
@@ -3,121 +3,57 @@ tree {
   width: 100%;
   height: 500px;
 }
-
-.tree .btn-off {
-  color: #fff;
-  background-color: #428bca;
-  border-color: #357ebd;
-}
-.tree .btn-off:hover {
-  color: #fff;
-}
-
-.tree .btn {
-  margin-right: 8px;
-}
-
-.angular-ui-tree-handle {
-  background: #f8faff;
-  border: 1px solid #C5CAE9;
-  color: #7c9eb2;
-  padding: 10px 10px;
-  cursor: default;
-}
-.angular-ui-tree-handle:hover {
-  color: #438eb9;
-  background: #e3e5f1;
-  border: 1px solid #C5CAE9;
-}
-
-.angular-ui-tree-placeholder {
-  background: #f0f9ff;
-  border: 2px dashed #bed2db;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-.group-title {
-  background-color: #687074 !important;
-  color: #FFF !important;
-}
-
-.tree-node-unselected {
-  background: #E8EAF6;
-}
-.tree-node-selected {
-  background: #e1e3e8;
-}
-
-.tree-node:hover {
-  cursor: default;
-}
-
-.nodrop {
-  background-color: #f2dede;
-}
-
-.tree-node-content {
+tree span {
+  outline: none;
   margin: 0;
 }
-.tree-node-content label {
-  font-size: 12px;
-  margin-left: 5px;
-  position: absolute;
-}
-.tree-node-content label:hover {
-  cursor: pointer;
+tree span .fa {
+  color: #5C6BC0;
+  font-size: 14px;
+  padding: 0 2px 0 0;
 }
 
-.treeNodeLabelWithoutFilterText {
-  color: #3F51B5;
-}
-.treeNodeLabelWithFilterText {
-  color: #EF6C00;
-}
-
-.tree-handle {
-  padding: 10px;
-  background: #428bca;
-  color: #FFF;
-  margin-right: 10px;
-}
-
-.angular-ui-tree-handle:hover {
-}
-
-.angular-ui-tree-placeholder {
-  background: #f0f9ff;
-  border: 2px dashed #bed2db;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-.angular-ui-tree-handle {
-  padding: 7px 10px 3px;
+.angular-ui-tree-handle,
+tree .repeated-item {
+  border-bottom: 1px solid #C5CAE9;
+  cursor: default;
+  padding: 6px 0 4px;
   display: inline-block;
   width: 800px;
 }
+.angular-ui-tree-handle:hover,
+tree .repeated-item:hover{
+  background: #E8EAF6;
+}
 
-.treeNodeButton {
-  width: 22px;
-  min-width: 22px !important;
-  height: 22px;
-  min-height: 22px !important;
-  line-height: 22px !important;
-  margin: 0 4px 0 0 !important;
-  padding: 4px !important;
-  background-color: #3F51B5;
+.tree-node-unselected {
+  background: #FFFFFF;
 }
-.treeNodeButton:not([disabled]):hover {
-  background-color: #5C6BC0;
+.tree-node-selected {
+  background: #E8EAF6;
 }
-.treeNodeButton md-icon {
-  color: #FFFFFF;
-  font-size: 14px;
+.tree-node:hover {
+  cursor: default;
 }
-.angular-ui-tree-node {
-  min-height: 0;
+.tree-node label,
+tree .repeated-item label {
+  font-size: 12px;
+  margin-left: 10px;
+  position: absolute;
+  color: #3F51B5;
+}
+.tree-node label:hover {
+  cursor: pointer;
+}
+
+.md-virtual-repeat-container {
+  position: inherit;
+  display: inline-block;
+}
+.md-virtual-repeat-scroller,
+.md-virtual-repeat-offsetter{
+  position: relative !important;
+}
+.md-virtual-repeat-sizer {
+  height: 0 !important;
 }
