--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -1168,6 +1168,7 @@ header button.btn {
 	background-color: rgba(255, 255, 255, 0.5);
 	-webkit-transition: all linear 0.05s;
 	transition: all linear 0.05s;
+	overflow-y: auto;
 }
 
 #ui2-rightpanel.collapsed {
