--- a/plugins/AM_/panel/panelContent.jade
+++ b/plugins/AM_/panel/panelContent.jade
@@ -1,11 +1,11 @@
-div(layout="column", class="md-whiteframe-1dp", ng-class="pc.class", ng-show="pc.showContent")
+div(layout="column", class="md-whiteframe-1dp", ng-show="pc.showContent")
 
 	md-toolbar(class="md-primary", ng-click="pc.click()" ng-if="pc.showTitleBar")
 		div(class="md-toolbar-tools")
 			span(class="fa", ng-class="pc.icon")
-			label(class="md-flex") {{pc.contentTitle}}
+			//label(class="md-flex") {{pc.contentTitle}}
 
-	md-content(id="content", flex, layout-padding)
+	md-content(id="content", flex, layout-padding, ng-class="pc.class")
 
 	div(ng-if="pc.showHelp")
 		md-button.md-fab.md-mini#helpButton(aria-label="Help")
