--- a/public/plugins/AM_/viewpoints/viewpoints.css
+++ b/public/plugins/AM_/viewpoints/viewpoints.css
@@ -1,5 +1,15 @@
 viewpoints {
   display: block;
+  position: relative;
   width: 100%;
-  height: 500px;
+  height: 100%;
+}
+
+.viewpointsTools {
+  position: absolute;
+  width: 100%;
+  height: 30px;
+  bottom: 0;
+  background: #5C6BC0;
+  color: #FFFFFF;
 }
