--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -1173,6 +1173,7 @@ header button.btn {
 
 #ui2-rightpanel.collapsed {
 	right: -25%;
+	overflow-y: inherit;
 }
 
 .collapsed #ui2-rightpanel-collapse-btn {
