--- a/public/plugins/AM_/viewpoints/viewpoints.css
+++ b/public/plugins/AM_/viewpoints/viewpoints.css
@@ -5,11 +5,58 @@ viewpoints {
   height: 100%;
 }
 
+.viewpoint {
+  display: block;
+  border-bottom: 1px solid #C5CAE9;
+  cursor: default;
+  padding: 6px 0 4px;
+  height: 31px;
+  outline: none;
+  color: #3F51B5;
+  font-weight: normal;
+}
+.viewpoint:hover {
+  background: #E8EAF6;
+  cursor: pointer;
+}
+
 .viewpointsTools {
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+}
+
+.viewpointsToolsInput {
+  position: absolute;
+  width: 100%;
+  height: 40px;
+  bottom: 30px;
+  color: #3F51B5;
+  border: #3F51B5 1px solid;
+  border-bottom: none;
+}
+.viewpointsToolsInput input {
+  width: 180px;
+}
+.viewpointsToolsInput button {
+  position: absolute;
+  bottom: -5px;
+  right: -7px;
+}
+
+.viewpointsToolsBar {
   position: absolute;
   width: 100%;
   height: 30px;
   bottom: 0;
   background: #5C6BC0;
   color: #FFFFFF;
+  padding: 5px 5px 5px 10px;
+}
+.viewpointsToolsBar span {
+  font-size: 20px;
+  outline: none;
+}
+.viewpointsToolsBar span:hover {
+  cursor: pointer;
 }
