--- a/plugins/AM_/tree/treeNode.jade
+++ b/plugins/AM_/tree/treeNode.jade
@@ -1,10 +1,4 @@
 div(ui-tree-handle, class="tree-node tree-node-content", ng-class="tn.selectedClass")
-	//md-button.md-mini.treeNodeButton(ng-click="tn.collapse()", aria-label="Collapse", ng-if="tn.showCollapseButton")
-	span(ng-click="tn.collapse()", ng-if="tn.showCollapseButton")
-		span(class="fa fa-chevron-right", ng-if="tn.collapsed")
-		span(class="fa fa-chevron-down", ng-if="!tn.collapsed")
-	//md-button.md-mini.treeNodeButton(ng-click="tn.nodeToggled(tn.node._id)", aria-label="Toggle")
-	span(ng-click="tn.nodeToggled(tn.node._id)")
-		span(class="fa fa-eye", ng-if="tn.toggleState")
-		span(class="fa fa-eye-slash", ng-if="!tn.toggleState")
+	span(class="fa", ng-class="tn.collapseButtonClass", ng-click="tn.collapse()", ng-if="tn.showCollapseButton")
+	span(class="fa", ng-class="tn.toggleButtonClass", ng-click="tn.nodeToggled(tn.node._id)")
 	label(ng-click="tn.nodeSelected(tn.node._id)") {{tn.node.name}}
