--- a/public/plugins/AM_/home/home.css
+++ b/public/plugins/AM_/home/home.css
@@ -1,4 +1,5 @@
-.md-mini md-icon {
+.md-mini md-icon,
+.md-icon-button md-icon{
   font-size: 20px;
 }
 
@@ -8,3 +9,4 @@
   right: -36px;
   opacity: 0.75;
 }
+
