--- a/public/plugins/AM_/issues/issues.css
+++ b/public/plugins/AM_/issues/issues.css
@@ -14,7 +14,7 @@ issue {
 .issueTitle {
   position: relative;
   display: block;
-  height: 48px;
+  height: 50px;
 }
 .issueTitle:hover {
   background: #E8EAF6;
@@ -27,6 +27,9 @@ issue {
   position: absolute;
   top: 14px;
   left: 60px;
+}
+
+.issueComments {
 }
 
 issue .issueComment {
