--- a/public/plugins/AM_/panel/panel.css
+++ b/public/plugins/AM_/panel/panel.css
@@ -41,7 +41,7 @@ panel-content {
 }
 
 #rightPanel {
-  right: 500px;
+  right: 400px;
 }
 #rightPanel #items {
   left: 0;
@@ -69,40 +69,25 @@ panel-content md-content {
 
 panel-content-add {
   display: block;
-  margin: 30px 0 10px;
+  position: relative;
+  height: 80px;
 }
-
-panel-content-add .panelContentAddInput {
-  width: 100%;
-  height: 50px;
-  bottom: 30px;
+panel-content-add md-input-container {
+  position: absolute;
+  top: 20px;
   color: #3F51B5;
   border: #9FA8DA 1px solid;
-  border-bottom: none;
+  width: 100%;
+  height: 50px;
 }
-panel-content-add .panelContentAddInput input {
+panel-content-add input {
   position: absolute;
   top: 5px;
-  width: 180px;
+  left: 10px;
+  width: 170px !important;
 }
-panel-content-add .panelContentAddInput button {
-  position: absolute;
+panel-content-add button {
+  position: absolute !important;
   top: 0;
   right: 0;
-}
-
-panel-content-add .panelContentAddBar {
-  width: 100%;
-  height: 30px;
-  bottom: 0;
-  background: #9FA8DA;
-  color: #3F51B5;
-  padding: 5px 5px 5px 10px;
-}
-panel-content-add .panelContentAddBar span {
-  font-size: 20px;
-  outline: none;
-}
-panel-content-add .panelContentAddBar span:hover {
-  cursor: pointer;
 }
