ISSUE #88 - Improved styling on Tree and Issues, saving issues works

--- a/plugins/AM_/issues/issue.jade
+++ b/plugins/AM_/issues/issue.jade
@@ -1,5 +1,9 @@
 md-content
-	md-subheader(ng-click="is.toggleComments()") {{is.data.number}} {{is.data.name}} {{is.data.timeStamp}}
+	//md-subheader(ng-click="is.toggleComments()") {{is.data.number}} {{is.data.name}} {{is.data.timeStamp}}
+	div.issueTitle(layout="row", layout-align="space-between center", ng-click="is.toggleComments()")
+		label {{is.data.number}}
+		label {{is.data.name}}
+		label {{is.data.timeStamp}}
 
 	div(ng-show="is.showComments", ng-class="{issueComments: is.toggleCommentsState}", comments-height, num-new-comments="is.numNewComments")
 		div
@@ -9,6 +13,6 @@ md-content
 						h3 {{comment.comment}}
 						h4 {{comment.owner}}
 						p {{comment.timeStamp}}
-			panel-content-add(placeholder="New comment", on-save="is.saveComment(text)")
+			panel-content-add(placeholder="New comment", on-save="is.saveComment(text)", clear-input="is.clearInput")
 
 	md-divider
