--- a/plugins/AM_/tree/treeNode.jade
+++ b/plugins/AM_/tree/treeNode.jade
@@ -1,4 +1,12 @@
 div(ui-tree-handle, class="tree-node tree-node-content", ng-class="tn.selectedClass")
-	span(class="fa", ng-class="tn.collapseButtonClass", ng-click="tn.collapse()", ng-if="tn.showCollapseButton")
-	span(class="fa", ng-class="tn.toggleButtonClass", ng-click="tn.nodeToggled(tn.node._id)")
-	label(ng-click="tn.nodeSelected(tn.node._id)") {{tn.node.name}}
+	div(layout="row", layout-align="start center")
+		md-button.md-icon-button(aria-label="Collapse", ng-click="tn.expand()", ng-disabled="!tn.canExpand")
+			md-icon.md-accent(md-font-icon="fa-chevron-circle-right", class="fa", ng-if="!tn.expanded")
+			md-icon(md-font-icon="fa-chevron-circle-down", class="fa", ng-if="tn.expanded")
+		md-checkbox(
+			ng-model="tn.toggleState"
+			ng-change="tn.nodeToggled(tn.node._id)"
+			aria-label="Toggle"
+		)
+		md-list-item(ng-click="tn.nodeSelected(tn.node._id)")
+			p {{tn.node.name}} {{tn.collapseButtonClass}}
