--- a/plugins/AM_/tree/treeNode.jade
+++ b/plugins/AM_/tree/treeNode.jade
@@ -8,5 +8,4 @@ div(ui-tree-handle, class="tree-node tree-node-content", ng-class="tn.selectedCl
 			ng-change="tn.nodeToggled(tn.node._id)"
 			aria-label="Toggle"
 		)
-		md-list-item(ng-click="tn.nodeSelected(tn.node._id)")
-			p {{tn.node.name}} {{tn.collapseButtonClass}}
+		p(ng-click="tn.nodeSelected(tn.node._id)") {{tn.node.name}}
