--- a/public/plugins/AM_/issues/issues.css
+++ b/public/plugins/AM_/issues/issues.css
@@ -7,6 +7,10 @@ issues .minHeight {
   height: 50px;
 }
 
+.issueAddUnselectedClass {
+  color: rgba(0,0,0,0.54);
+}
+
 /** Issue *************************************************************************************************************/
 
 issue {
