--- a/plugins/AM_/clip/clip.jade
+++ b/plugins/AM_/clip/clip.jade
@@ -1,20 +1,19 @@
 div(ng-class="cl.height")
 	div(layout="column", layout-align="start center")
-		p
+		div
 			| Axis:
-			span.value {{cl.selectedAxis}}
-		md-radio-group(ng-model="cl.selectedAxis")
-			md-radio-button(ng-repeat="axis in cl.axes", value="{{axis}}") {{axis}}
+			md-radio-group(ng-model="cl.selectedAxis")
+				md-radio-button(ng-repeat="axis in cl.axes", value="{{axis}}") {{axis}}
 
-	.clipSlider
-		P
-			| Position:
-			span.value {{cl.sliderPosition}}
-		md-slider(
-			flex
-			ng-model="cl.sliderPosition"
-			step="{{cl.sliderStep}}"
-			min="{{cl.sliderMin}}"
-			max="{{cl.sliderMax}}"
-			aria-label="Position"
-		)
+		.clipSlider
+			div(layout)
+				md-slider(
+					flex
+					ng-model="cl.sliderPosition"
+					step="{{cl.sliderStep}}"
+					min="{{cl.sliderMin}}"
+					max="{{cl.sliderMax}}"
+					aria-label="Position"
+				)
+				div(flex="20", layout, layout-align="center center")
+					input(flex, type="number", ng-model="cl.sliderPosition")
