ISSUE #88 - Removed tree filter plugin and added files to post install

--- a/plugins/project/project.jade
+++ b/plugins/project/project.jade
@@ -15,8 +15,8 @@
 			if ui.viewport
 				each uicomp in ui.viewport
 					!= renderMe(uicomp["template"], locals)
-	//.ui2
-		#ui2-left
+	.ui2
+		//#ui2-left
 			if ui.left
 				each uicomp in ui.left
 					!= renderMe(uicomp["template"], locals)
@@ -29,7 +29,6 @@
 		each uicomp in ui.walkthrough
 			!= renderMe(uicomp["template"], locals)
 
-	//left-panel
 	panel#leftPanel(position="left")
 	panel#rightPanel(position="right")
 	bottom-buttons
