ISSUE #88 - Improving issue pin creation

--- a/plugins/AM_/issues/issues.jade
+++ b/plugins/AM_/issues/issues.jade
@@ -3,14 +3,16 @@ div(ng-class="iss.height")
 		div(layout="row", layout-align="space-around center")
 			md-button.md-icon-button(aria-label="View", ng-class="iss.issueAddNormalClass", ng-click="iss.setupAddNormal()")
 				md-icon(class="fa fa-plus")
-			md-button.md-icon-button(aria-label="View", ng-class="iss.issueAddPinClass", ng-click="iss.setupAddPin()")
+			md-button.md-icon-button(aria-label="View", ng-class="iss.issueAddPinClass", ng-click="iss.setupAddPin($event)")
 				md-icon(class="fa fa-map-pin")
 		panel-content-add(
-			ng-if="iss.showAdd"
+			ng-if="iss.showInput"
 			placeholder="New issue"
 			on-save="iss.saveIssue(text)"
 			clear-input="iss.clearInput"
 		)
+		div.issuesAddInfo(ng-if="iss.showInfo")
+			label {{iss.info}}
 		md-divider
 
 	issue(
