--- a/jade/frontend.jade
+++ b/jade/frontend.jade
@@ -44,7 +44,7 @@ html(lang="en" ng-app="3drepo").ng-scope
 		each css in pluginCSS
 			link(href=css, rel='stylesheet', type="text/css")
 
-	body(ng-controller='BaseCtrl')
+	body(ng-controller='BaseCtrl' global)
 		// Plugin JADE Files
 		each j in pluginJade
 			script(type="text/ng-template", id=j.id)
