--- a/public/plugins/AM_/bottomButtons/bottomButtons.css
+++ b/public/plugins/AM_/bottomButtons/bottomButtons.css
@@ -2,8 +2,8 @@ bottom-buttons {
   display: block;
   position: absolute;
   bottom: 10px;
-  left: 0;
-  right: 0;
+  left: 600px;
+  right: 600px;
   margin: auto;
   text-align: center;
 }
