--- a/plugins/panels/panelRight.jade
+++ b/plugins/panels/panelRight.jade
@@ -4,10 +4,10 @@
 	if ui.rightpanel
 		ul.nav.nav-tabs
 			each uicomp in ui.rightpanel
-				li
-					a(data-toggle="tab", href='#' + uicomp["name"]) #{uicomp["name"]}
+				li(ng-class='{active: currentTab == \'' + uicomp['name'] + '\'}')
+					a(data-toggle="tab", ng-click='changeTab("' + uicomp['name'] + '")', href='#' + uicomp['name']) #{uicomp["name"]}
 		.tab-content
 			each uicomp in ui.rightpanel
-				.tab-pane(id=uicomp.name)
+				.tab-pane(id=uicomp.name, ng-class='{active: currentTab == \'' + uicomp['name'] + '\'}')
 					!= renderMe(uicomp["template"], locals)
 
